<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HMIHvpsStatus" Id="{c95ee4c4-6aeb-45a1-a4d9-18e304731ae7}">
    <Declaration><![CDATA[TYPE ST_HMIHvpsStatus EXTENDS ST_HMIStatus :
STRUCT
	// Live outputs of the HV supply, translated into real units
	V_cur		: LREAL;	// V
	I_cur		: LREAL;	// mA
	
	// Most recent commands
	V_set		: LREAL;
	I_set		: LREAL;
	
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>